--- a/servlets-xml/pom.xml
+++ b/servlets-xml/pom.xml
@@ -11,6 +11,13 @@
     <name>servlets-xml Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <jdk.version>1.8</jdk.version>
+        <javax.servlet.version>3.1.0</javax.servlet.version>
+        <mvn.compiler.plugin.version>2.3.2</mvn.compiler.plugin.version>
+        <mvn.war.plugin.version>2.3</mvn.war.plugin.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -18,9 +25,41 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${javax.servlet.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <finalName>servlets-xml</finalName>
+
+        <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${mvn.compiler.plugin.version}</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                </configuration>
+            </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>${mvn.war.plugin.version}</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
     </build>
 </project>
