--- a/servlets-annotations/pom.xml
+++ b/servlets-annotations/pom.xml
@@ -10,6 +10,7 @@
     <packaging>war</packaging>
     <name>servlets-annotations Maven Webapp</name>
     <url>http://maven.apache.org</url>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -17,8 +18,25 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>servlets-annotations</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/</url>
+                    <server>TomcatServer</server>
+                    <path>/${artifactId}</path>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
